syntax = "proto3";

package piapiac.msg;

message PiaRequest {
  enum Type {
      HEARTBEAT = 0;
  }
  Type type = 1;
  string candy = 2;
}

message PiaMessage {
  string title = 1;
}

service PiapiacService {
  rpc Snap (PiaRequest) returns (PiaMessage);
}